--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Platos gourmet en solo 15 minutos, variedad de platos sofiticados en solo 15 minutos">
+        <meta name="description" content="Platos gourmet y sofisticados, comida al vacio en solo 15 minutos">
         <meta name="keywords" content="breif, Briefencasa, gourmet, briefcatering, excelencia, comida, rapidez,">
         <title>BriefenCasa</title>
         <link rel="stylesheet" href="css/main.css">
