--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Platos gourmet y sofisticados, comida al vacio en solo 15 minutos">
-        <meta name="keywords" content="breif, Briefencasa, gourmet, briefcatering, excelencia, comida, rapidez,">
+        <meta name="keywords" content="Breif, Briefencasa, gourmet, briefcatering, excelencia, comida, rapidez, sofisticacion">
         <title>BriefenCasa</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
