commit para github

--- a/menu.html
+++ b/menu.html
@@ -157,7 +157,7 @@
                 <h2 class="sectionM__article__title__h2 col-12 display-2"> MENU CARNE</h2>
             </div>
             <div class="row">
-                <div class="sectionM__article__div__div  col-sm-12  col-lg-6">
+                <div class="sectionM__article__div__div">
                     <div class="sectionM__article__div__div__div card" style="height:60rem">
                         <div class="sectionM__article__div__div__div__div-foto-m inner">
                             <img src="fotos/Platos/menu2plato1.jpg" class="card-img-top" alt="...">
