Menu pizzas y pastas arreglado

--- a/menu.html
+++ b/menu.html
@@ -154,7 +154,7 @@
         <!-- SECTOR MENU CARNE -->
         <article  id="menuDos" class="sectionM__article">
             <div class="sectionM__article__title">
-                <h2 class="sectionM__article__title__h2 col-12 display-2"> MENU CARNE</h2>
+                <h2 class="sectionM__article__title__h2"> MENU CARNE</h2>
             </div>
             <div class="row">
                 <div class="sectionM__article__div__div">
