Se modifico los meta de description y lo de los KEYWORD

--- a/bebidas.html
+++ b/bebidas.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Quiene somos, nuestra historia, nuestors servicios y como podemos organizar tu vida para mejero">
-        <meta name="keywords" content="casamientos, eventos, familia, comida, gourmet, elegancia">
+        <meta name="description" content="Ofrecemos una amplea carta de bebidas para acompañar los platos gourmet, entre ello contamos con vinos, champagne y cervenza">
+        <meta name="keywords" content="Carta, Vinos, Champagne, Cerveza, Acompañamiento, Degustacion">
         <title>Brief Bebidas</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
