Se agrego los @Media tanto en la parte menu,bebidas y nosotros, para cuando se vea en formato mobil. Tamien se paso todo lo que es Nosotros a SASS contemplando &

--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Quiene somos, nuestra historia, nuestors servicios y como podemos organizar tu vida para mejero">
         <meta name="keywords" content="casamientos, eventos, familia, comida, gourmet, elegancia">
         <title>Brief Nosotros</title>
-        <link rel="stylesheet" href="css/estiloa.css">
+        <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -16,85 +16,85 @@
 <body>       
 <!-- Secto NAV -->
     <!-- Secto NAV -->
-    <header class="container-fluid header m-0 p-0">    
-        <nav class="row header__nav navbar navbar-expand-sm navbar-expand-lg navbar-light bg-light p-0 m-0">
-            <div class="header__nav__div  col-sm-12 col-lg-2 m-0">
-                <img class="header__nav__div__img  img-fluid" src="fotos/logo.png" alt="foto logo">
+    <header class="header">    
+        <nav class="header__nav">
+            <div class="header__nav__div">
+                <img class="header__nav__div__img" src="fotos/logo.png" alt="foto logo">
             </div>
-            <button class="header__nav__button col-sm-12 navbar-toggler" data-toggle="collapse" data-target="#navBar">
-                <span class="header__nav__button __span navbar-toggler-icon"></span>
+            <button class="header__nav__button" data-toggle="collapse" data-target="#navBar">
+                <span class="header__nav__button__span"></span>
             </button>
-            <div class="header__nav__div p-0  col-sm-12 col-lg-8 collapse navbar-collapse " id="navBar">
-                <ul class="header__nav__div__ul navbar-nav d-flex justify-content-around">
-                    <li class="header__nav__div__ul__li nav-item active">
-                        <a href="index.html" class="header__nav__div__ul__li__a text-decoration-none navbar-link">Inicio</a>
+            <div class="header__nav__text" id="navBar">
+                <ul class="header__nav__text__ul">
+                    <li class="header__nav__text__ul__li">
+                        <a href="index.html" class="header__nav__text__ul__li__a">Inicio</a>
                     </li>
-                    <li class="header__nav__div__ul__li nav-item dropdown">
-                        <a href="menu.html" class="header__nav__div__ul__li__a text-decoration-none navbar-link" id="navDropdown" role="button" data-toggle="dropdown">Menu</a>
-                        <div class="header__nav__div__ul__li__div dropdown-menu text-center" aria-labelledby="navDropdown">
-                            <a href="menu.html#menuUno" class="header__nav__div__ul__li__div__a dropdown-item p-0">Menu Pizzas y Pastas </a>
+                    <li class="header__nav__text__ul__li">
+                        <a href="menu.html" class="header__nav__text__ul__li__a" id="navDropdown" role="button" data-toggle="dropdown">Menu</a>
+                        <div class="header__nav__text__ul__li__div dropdown-menu" aria-labelledby="navDropdown">
+                            <a href="menu.html#menuUno" class="header__nav__text__ul__li__div__a ">Menu Pizzas y Pastas </a>
                             <div class=" dropdown-divider"></div>
-                            <a href="menu.html#menuDos" class="header__nav__div__ul__li__div__a dropdown-item">Menu Carne </a>
+                            <a href="menu.html#menuDos" class="header__nav__text__ul__li__div__a">Menu Carne </a>
                             <div class=" dropdown-divider"></div>
-                            <a href="menu.html#menuTres" class="header__nav__div__ul__li__div__a dropdown-item">Menu Cerdo </a>
+                            <a href="menu.html#menuTres" class="header__nav__text__ul__li__div__a">Menu Cerdo </a>
                             <div class="dropdown-divider"></div>
-                            <a href="menu.html#menuCuatro" class="header__nav__div__ul__li__div__a dropdown-item">Menu Pollo </a>
+                            <a href="menu.html#menuCuatro" class="header__nav__text__ul__li__div__a">Menu Pollo </a>
                             <div class="dropdown-divider"></div>
-                            <a href="menu.html#menuCinco" class="header__nav__div__ul__li__div__a dropdown-item">Menu de Estacion</a>
+                            <a href="menu.html#menuCinco" class="header__nav__text__ul__li__div__a">Menu de Estacion</a>
                             <div class="dropdown-divider"></div>
-                            <a href="menu.html#menuSeis" class="header__nav__div__ul__li__div__a dropdown-item">Menu Saludable</a>
+                            <a href="menu.html#menuSeis" class="header__nav__text__ul__li__div__a ">Menu Saludable</a>
                         </div>
                     </li>
-                    <li class="header__nav__div__ul__li nav-item dropdown">
-                        <a href="" class="header__nav__div__ul__li__a navbar-link  text-decoration-none" id="navDropdown" role="button" data-toggle="dropdown">Bebida</a>
-                        <div class="header__nav__div__ul__li__div dropdown-menu text-center" aria-labelledby="navDropdown">
-                            <a href="bebidas.html#bebidaUno" class="header__nav__div__ul__li__div__a dropdown-item">Carta de Vinos</a>
+                    <li class="header__nav__text__ul__li">
+                        <a href="" class="header__nav__text__ul__li__a " id="navDropdown" role="button" data-toggle="dropdown">Bebida</a>
+                        <div class="header__nav__text__ul__li__div dropdown-menu" aria-labelledby="navDropdown">
+                            <a href="bebidas.html#bebidaUno" class="header__nav__text__ul__li__div__a">Carta de Vinos</a>
                             <div class="dropdown-divider"></div>
-                            <a href="bebidas.html#bebidaDos" class="header__nav__div__ul__li__div__a dropdown-item">Carta de Champagne</a>
+                            <a href="bebidas.html#bebidaDos" class="header__nav__text__ul__li__div__a">Carta de Champagne</a>
                             <div class="dropdown-divider"></div>
-                            <a href="bebidas.html#bebidaTres" class="header__nav__div__ul__li__div__a dropdown-item">Otros</a>
+                            <a href="bebidas.html#bebidaTres" class="header__nav__text__ul__li__div__a">Otros</a>
                         </div>
                         </li>
-                        <li class="header__nav__div__ul__li nav-item">
-                            <a href="nosotros.html" class="header__nav__div__ul__li__a navbar-link text-decoration-none">Nosotros</a>
+                        <li class="header__nav__text__ul__li">
+                            <a href="nosotros.html" class="header__nav__text__ul__li__a navbar-link text-decoration-none">Nosotros</a>
                         </li>
-                        <li class="header__nav__div__ul__li nav-item">
-                            <a href="contactos.html" class="header__nav__div__ul__li__a navbar-link text-decoration-none">Contactos</a>
+                        <li class="header__nav__text__ul__li">
+                            <a href="contactos.html" class="header__nav__text__ul__li__a navbar-link text-decoration-none">Contactos</a>
                         </li>
                     </ul>
                 </div>
-                <div class="sectorRedes col-sm-12 col-lg-2  pr-5 d-flex align-items-center d-flex justify-content-around ">
-                        <img class="imagenRedes" src="fotos/shopping.png" alt="Logo Shopping">
-                        <img class="imagenRedes" src="fotos/whatsapp1.png" alt="Logo WhatsApss">
-                        <img class="imagenRedes" src="fotos/facebook2.png" alt="Logo Facebook">
-                        <img class="imagenRedes" src="fotos/instagram2.png" alt="Logo Facebook">
+                <div class="header__nav__redes col-sm-12 col-lg-2  pr-5 d-flex align-items-center d-flex justify-content-around ">
+                        <img class="header__nav__redes__img" src="fotos/shopping.png" alt="Logo Shopping">
+                        <img class="header__nav__redes__img" src="fotos/whatsapp1.png" alt="Logo WhatsApss">
+                        <img class="header__nav__redes__img" src="fotos/facebook2.png" alt="Logo Facebook">
+                        <img class="header__nav__redes__img" src="fotos/instagram2.png" alt="Logo Facebook">
                 </div>
         </nav>
-    </header>       
-    <section class="container">
-        <article class=" section__nosotros row">
-            <div class="section__nosotros__div col-sm-12 col-lg-6 d-flex justify-content-center">
-                <img class="section__nosotros__div__img img-fluid" src="fotos/seccion4.png" alt="">
+    </header>     
+    <section class="sectionN container">
+        <article class="sectionN__article row">
+            <div class="sectionN__article__div col-sm-12 col-lg-6 d-flex justify-content-center">
+                <img class="img-fluid" src="fotos/seccion4.png" alt="">
             </div>
-            <div class="section__nosotros__div col-sm-12 col-lg-6">
-                <h1 class="section__nosotros__div__h1 display-2">
+            <div class="sectionN__article__div-texto-n col-sm-12 col-lg-6">
+                <h1 class="sectionN__article__div-texto-n__h1 display-2">
                     QUIEN SOMOS
                 </h1>
-                <h2 class="section__nosotros__div__h2">
+                <h2 class="sectionN__article__div-texto-n__h2">
                     Comida al vacio en solo 15 minutos
                 </h2>
-                <p class="section__nosotros__div__p">
+                <p class="sectionN__article__div-texto-n__p">
                     Creamos BRIEF en el 2005 con el objetivo de brindar soluciones en materia de eventos sociales y corporativos.
                     A lo largo de todos estos años fuimos adquiriendo experiencia, la cual nos posiciona como una empresa flexible, 
                     que se adapta a cada cliente para satisfacerlo. En BRIEF cada cliente es diferente, tomamos sus necesidades 
                     y objetivos y generamos alternativas para cada caso en particular combinando la creatividad y la innovación.
                 </p>
-                <p class="section__nosotros__div__p">Somo un empresa que se reinvento y nos dedicamos a llevar  a tu casa la mejor comida gourmet
+                <p class="sectionN__article__div-texto-n__p">Somo un empresa que se reinvento y nos dedicamos a llevar  a tu casa la mejor comida gourmet
                     envasada al vacio. Nuestros platos estan pensado para todas las personas y contamos
                     con un amplio menu y elaborada por nosotros. A diferencia de otras formas de congelado, 
                     ésta no se quema ni se cristaliza.
                 </p>
-                <p class="section__nosotros__div__p">
+                <p class="sectionN__article__div-texto-n__p">
                     Lo que buscamos es faclitarle la vida a la hora de cocinar y poder
                     disfrutar un plato en tan solo 15 minutos. Teniendo en cuenta la pandemia y el tema del HOME 
                     OFFICE y que los tiempos estan cambiando que mejor que tener esta solucion en tus manos.
@@ -102,32 +102,30 @@
             </div>      
         </article>
     </section>
-<!-- SECTOR PIE DE PAGINA  -->
-    <footer class="container-fluid bg-dark">
-        <section class="row">
-            <article class="col-sm-12 col-lg-4 sectorF1">
-                <h2 class="col-12 tituloF text-center font-weight-bolder text-white">@BRIEFcatering</h2>
-                <div class=" areaFoto  m-auto row">
-                    <div class="col-sm-12 col-lg-6 areaFFooter p-0">
-                        <img class="fotoFooter p-0 img-fluid" src="fotos/footerribs.jpg" alt="foto ribs"> 
+    <!-- SECTOR FOOTER  -->
+    <footer class="footer">
+        <section class=" footer__section">
+            <article class="footer__section__article">
+                <h2 class="footer__section__article__h2">@BRIEFcatering</h2>
+                <div class="footer__section__article__div">
+                    <div class="footer__section__article__div__div">
+                        <img class="footer__section__article__div__div__img" src="fotos/footerribs.jpg" alt="foto ribs"> 
                     </div>
-                    <div class="col-sm-12 col-lg-6 areaFFooter p-0">
-                        <img class="fotoFooter p-0 img-fluid" src="fotos/footerarrozm.jpg" alt="foto bastones">
+                    <div class="footer__section__article__div__div">
+                        <img class="footer__section__article__div__div__img" src="fotos/footerarrozm.jpg" alt="foto bastones">
                     </div>
-                    <div class="col-sm-12 col-lg-6 areaFFooter p-0">  
-                        <img class="fotoFooter p-0 img-fluid" src="fotos/footertarta.jpg" alt="foto tarta">      
+                    <div class="footer__section__article__div__div">  
+                        <img class="footer__section__article__div__div__img" src="fotos/footertarta.jpg" alt="foto tarta">      
                     </div>
-                    <div class="col-sm-12 col-lg-6 areaFFooter p-0">
-                        <img class="fotoFooter p-0 img-fluid" src="fotos/footerpolloa.jpg" alt="foto pollo">
+                    <div class="footer__section__article__div__div">
+                        <img class="footer__section__article__div__div__img" src="fotos/footerpolloa.jpg" alt="foto pollo">
                     </div>
                 </div>             
             </article>
-            <article class="col-sm-12 col-lg-4 sectorF2">
-                <div class="tituloFooter">
-                    <h2 class="tituloF text-center font-weight-bolder text-white">#BRIEFENCASA</h2> 
-                </div>
-                <div class="sectorParrafo m-2">
-                    <p class="parrafoDeli text-white">
+            <article class="footer__section__article">
+                <h2 class="footer__section__article__h2">#BRIEFENCASA</h2> 
+                <div class="footer__section__article__texto">
+                    <p class="footer__section__article__texto__p text-white">
                         ENTREGAS EN CAPITAL: Viernes de 10 a 16 HS ENTREGA 
                         EN ZONA NORTE:Viernes de 16 a 21 HS.
                         AHORA PODES TENER COMIDA GOURMET EN CASA.
@@ -137,12 +135,10 @@
                 </div>
             </article>
             
-            <article class="col-sm-12 col-lg-4 sectorF3">
-                <div class="tituloFooter">
-                    <h2  class="tituloF text-center font-weight-bolder text-white">PLATO GOURMET EN 15 MIN</h2>
-                </div>
-                <div class="sectorParrafo m-2">
-                    <ol class="parrafoDeli2 text-white text-uppercase">
+            <article class="footer__section__article">
+                <h2  class="footer__section__article__h2">PLATO GOURMET EN 15 MIN</h2>
+                <div class="footer__section__article__texto">
+                    <ol class="footer__section__article__texto__ol">
                         <li>Poner agua en una olla y dejar ervir.</li>
                         <li>Intorducior en la olla el plato que deseas degustar</li>
                         <li>Espere los minutos que dice el packaging</li>
