Se corrigio la seccion de Contactos, paso todo a scss y se agrego @media la parte de SM, se modifico los dos metas de description y de KEYWORD

--- a/nosotros.html
+++ b/nosotros.html
@@ -71,13 +71,13 @@
                 </div>
         </nav>
     </header>     
-    <section class="sectionN container">
-        <article class="sectionN__article row">
-            <div class="sectionN__article__div col-sm-12 col-lg-6 d-flex justify-content-center">
-                <img class="img-fluid" src="fotos/seccion4.png" alt="">
+    <section class="sectionN">
+        <article class="sectionN__article">
+            <div class="sectionN__article__div">
+                <img  src="fotos/seccion4.png" alt="">
             </div>
-            <div class="sectionN__article__div-texto-n col-sm-12 col-lg-6">
-                <h1 class="sectionN__article__div-texto-n__h1 display-2">
+            <div class="sectionN__article__div-texto-n">
+                <h1 class="sectionN__article__div-texto-n__h1">
                     QUIEN SOMOS
                 </h1>
                 <h2 class="sectionN__article__div-texto-n__h2">
