Se trabajo en _boot para llevar lo que se pudo llevar

--- a/contactos.html
+++ b/contactos.html
@@ -70,8 +70,8 @@
                 </div>
         </nav>
     </header>   
-        <section class="sectionC row d-flex justify-content-center">
-            <article class="sectionC__article col-sm-12 col-lg-6">
+        <section class="sectionC">
+            <article class="sectionC__article">
                 <div id="carouselExampleInterval" class="sectionC__article__div carousel slide carousel-fade" data-ride="carousel">
                     <div class="sectionC__article__div carousel-inner">
                         <div class="sectionC__article__div__div carousel-item active" data-interval="500">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
             </article>
-            <article class="sectionC__consulta col-sm-12 col-lg-6">
+            <article class="sectionC__consulta">
                 <form class="sectionC__consulta__form">
                     <h2 class=" sectionC__consulta__form__h2 display-3">CONTACTOS</h2>
                     <div class="sectionC__consulta__form__div form-group">
