--- a/menu.html
+++ b/menu.html
@@ -495,7 +495,7 @@
                 <h2  class="footer__section__article__h2">PLATO GOURMET EN 15 MIN</h2>
                 <div class="footer__section__article__texto">
                     <ol class="footer__section__article__texto__ol">
-                        <li>Poner agua en una olla y dejar ervir.</li>
+                        <li>Poner agua en una olla y dejar hervir.</li>
                         <li>Intorducior en la olla el plato que deseas degustar</li>
                         <li>Espere los minutos que dice el packaging</li>
                         <li>Retirar la bolsa y servir.</li>
