Se cambio los IMPORT de orden en el MAIN

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- SECTOR CARRUSEL  -->
         <section class="carrusel">
             <article class="carrusel__article">
-                <div id="carouselExampleIndicators" class="carrusel__article__div carousel" data-ride="carousel">
+                <div id="carouselExampleIndicators" class="carrusel__article__div carousel w-100" data-ride="carousel">
                     <ol class="carrusel__article__div__ol">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="carrusel__article__div__ol__li"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
