Se agrego el COPPYRIGHT en todas las secciones y se le dio dio formato en SASS

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- SECTOR CARRUSEL  -->
         <section class="carrusel">
             <article class="carrusel__article">
-                <div id="carouselExampleIndicators" class="carrusel__article__div carousel w-100" data-ride="carousel">
+                <div id="carouselExampleIndicators" class="carrusel__article__div carousel" data-ride="carousel">
                     <ol class="carrusel__article__div__ol">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="carrusel__article__div__ol__li"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -168,14 +168,15 @@
                     <h2  class="footer__section__article__h2">PLATO GOURMET EN 15 MIN</h2>
                     <div class="footer__section__article__texto">
                         <ol class="footer__section__article__texto__ol">
-                            <li>Poner agua en una olla y dejar ervir.</li>
-                            <li>Intorducior en la olla el plato que deseas degustar</li>
+                            <li>Poner agua en una olla y dejar hervir.</li>
+                            <li>Intorducir en la olla el plato que deseas degustar</li>
                             <li>Espere los minutos que dice el packaging</li>
                             <li>Retirar la bolsa y servir.</li>
                         </ol>
                     </div>
-                </art>        
-            </section>    
+                </art>
+                <p class="footer__section__p" >Copyright © Patricio Sandor</p>        
+            </section>  
         </footer>
     <!-- JS PLUGGIN -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
