--- a/menu.html
+++ b/menu.html
@@ -458,7 +458,7 @@
             </div>
         </article>
     </section>
-    <!-- SECTOR FOOTER  -->
+    <!-- SECTOR PIE DE PAGINA  -->
     <footer class="footer">
         <section class=" footer__section">
             <article class="footer__section__article">
@@ -496,13 +496,14 @@
                 <div class="footer__section__article__texto">
                     <ol class="footer__section__article__texto__ol">
                         <li>Poner agua en una olla y dejar hervir.</li>
-                        <li>Intorducior en la olla el plato que deseas degustar</li>
+                        <li>Intorducir en la olla el plato que deseas degustar</li>
                         <li>Espere los minutos que dice el packaging</li>
                         <li>Retirar la bolsa y servir.</li>
                     </ol>
                 </div>
-            </art>        
-        </section>    
+            </art>
+            <p class="footer__section__p" >Copyright © Patricio Sandor</p>        
+        </section>  
     </footer>
     <!-- JS PLUGGIN -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
