--- a/contactos.html
+++ b/contactos.html
@@ -153,7 +153,7 @@
         <section class=" footer__section">
             <article class="footer__section__article">
                 <h2 class="footer__section__article__h2">@BRIEFcatering</h2>
-                <div class="footer__section__article__div">
+                <div class="footer__section__article__div mt">
                     <div class="footer__section__article__div__div">
                         <img class="footer__section__article__div__div__img" src="fotos/footerribs.jpg" alt="foto ribs"> 
                     </div>
