Se mofico el logo para que sea un hipervinculo y te lleve al INDEX

--- a/bebidas.html
+++ b/bebidas.html
@@ -14,12 +14,13 @@
     
 </head>
 <body>       
-<!-- Secto NAV -->
-    <!-- Secto NAV -->
+<!-- Secto NAV -->>
     <header class="header">    
         <nav class="header__nav">
             <div class="header__nav__div">
-                <img class="header__nav__div__img" src="fotos/logo.png" alt="foto logo">
+                <a class="header__nav__div__a" href="index.html">
+                    <img class="header__nav__div__a__img" src="fotos/logo.png" alt="foto logo">
+                </a> 
             </div>
             <button class="header__nav__button" data-toggle="collapse" data-target="#navBar">
                 <span class="header__nav__button__span"></span>
@@ -70,7 +71,7 @@
                         <img class="header__nav__redes__img" src="fotos/instagram2.png" alt="Logo Facebook">
                 </div>
         </nav>
-    </header>    
+    </header>   
     <section class="sectionB">
 <!-- SECTOR CARTA DE VINOS -->
         <article  id="bebidaUno" class="sectionB__article2">
