--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <header class="header">    
             <nav class="header__nav">
                 <div class="header__nav__div">
-                    <img class="header__nav__div__img" src="fotos/logo.png" alt="foto logo">
+                    <a class="header__nav__div__a" href="index.html">
+                        <img class="header__nav__div__a__img" src="fotos/logo.png" alt="foto logo">
+                    </a> 
                 </div>
                 <button class="header__nav__button" data-toggle="collapse" data-target="#navBar">
                     <span class="header__nav__button__span"></span>
