--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
         </header>   
     <!-- Secto MAIN -->
     <!-- SECTOR VIDEO Y FOTO -->
-        <section class="index" >
-            <img class="index__img" src="fotos/Platos/fondoVideo.png" alt="">
-            <video class="index__video1"  src="videos/video-index.mp4" autoplay muted controls loop></video>
-            <video class="index__video2" src="videos/video-index.mp4" autoplay muted controls loop></video>
+        <section class="index">
+            <!-- <video class="index__video"  src="videos/video-index.mp4" autoplay muted controls loop></video>           -->
         </section>
     <!-- SECTOR CARRUSEL  -->
         <section class="carrusel">
