--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Secto MAIN -->
     <!-- SECTOR VIDEO Y FOTO -->
         <section class="index">
-            <!-- <video class="index__video"  src="videos/video-index.mp4" autoplay muted controls loop></video>           -->
+            <video class="index__video"  src="videos/video-index.mp4" autoplay muted controls loop></video>          
         </section>
     <!-- SECTOR CARRUSEL  -->
         <section class="carrusel">
