--- a/nosotros.html
+++ b/nosotros.html
@@ -14,9 +14,8 @@
     
 </head>
 <body>       
+
 <!-- Secto NAV -->
-    <!-- Secto NAV -->
-    <!-- Secto NAV -->
     <header class="header">    
         <nav class="header__nav">
             <div class="header__nav__div">
@@ -66,14 +65,14 @@
                         </li>
                     </ul>
                 </div>
-                <div class="header__nav__redes col-sm-12 col-lg-2  pr-5 d-flex align-items-center d-flex justify-content-around ">
+                <div class="header__nav__redes">
                         <img class="header__nav__redes__img" src="fotos/shopping.png" alt="Logo Shopping">
                         <img class="header__nav__redes__img" src="fotos/whatsapp1.png" alt="Logo WhatsApss">
                         <img class="header__nav__redes__img" src="fotos/facebook2.png" alt="Logo Facebook">
                         <img class="header__nav__redes__img" src="fotos/instagram2.png" alt="Logo Facebook">
                 </div>
         </nav>
-    </header>      
+    </header>     
     <section class="sectionN">
         <article class="sectionN__article">
             <div class="sectionN__article__div">
@@ -123,12 +122,13 @@
                     <div class="footer__section__article__div__div">
                         <img class="footer__section__article__div__div__img" src="fotos/footerpolloa.jpg" alt="foto pollo">
                     </div>
+                    <p class="footer__section__article__div__p" >Copyright © Patricio Sandor</p>
                 </div>             
             </article>
             <article class="footer__section__article">
                 <h2 class="footer__section__article__h2">#BRIEFENCASA</h2> 
                 <div class="footer__section__article__texto">
-                    <p class="footer__section__article__texto__p text-white">
+                    <p class="footer__section__article__texto__p">
                         ENTREGAS EN CAPITAL: Viernes de 10 a 16 HS ENTREGA 
                         EN ZONA NORTE:Viernes de 16 a 21 HS.
                         AHORA PODES TENER COMIDA GOURMET EN CASA.
@@ -139,7 +139,7 @@
             </article>
             
             <article class="footer__section__article">
-                <h2  class="footer__section__article__h2">PLATO GOURMET EN 15 MIN</h2>
+                <h2  class="footer__section__article__h2">PLATOS EN 15 MIN</h2>
                 <div class="footer__section__article__texto">
                     <ol class="footer__section__article__texto__ol">
                         <li>Poner agua en una olla y dejar hervir.</li>
@@ -148,8 +148,7 @@
                         <li>Retirar la bolsa y servir.</li>
                     </ol>
                 </div>
-            </art>
-            <p class="footer__section__p" >Copyright © Patricio Sandor</p>        
+            </art>        
         </section>  
     </footer>
 <!-- JS PLUGGIN -->
