--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="keywords" content="Breif, Briefencasa, gourmet, briefcatering, excelencia, comida, rapidez, sofisticacion">
         <title>BriefenCasa</title>
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/all.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
