--- a/nosotros.html
+++ b/nosotros.html
@@ -14,8 +14,7 @@
     
 </head>
 <body>       
-
-<!-- Secto NAV -->
+    <!-- Secto NAV -->
     <header class="header">    
         <nav class="header__nav">
             <div class="header__nav__div">
@@ -66,13 +65,21 @@
                     </ul>
                 </div>
                 <div class="header__nav__redes">
-                        <img class="header__nav__redes__img" src="fotos/shopping.png" alt="Logo Shopping">
-                        <img class="header__nav__redes__img" src="fotos/whatsapp1.png" alt="Logo WhatsApss">
-                        <img class="header__nav__redes__img" src="fotos/facebook2.png" alt="Logo Facebook">
-                        <img class="header__nav__redes__img" src="fotos/instagram2.png" alt="Logo Facebook">
+                        <a href="">
+                            <img class="header__nav__redes__img" src="fotos/shopping.png" alt="Logo Shopping">
+                        </a>
+                        <a href="http://wa.me/5491158301557">
+                            <img class="header__nav__redes__img" src="fotos/whatsapp1.png" alt="Logo WhatsApss">
+                        </a>
+                        <a href="https://www.facebook.com/briefcatering/">
+                            <img class="header__nav__redes__img" src="fotos/facebook2.png" alt="Logo Facebook">
+                        </a>
+                        <a href="https://www.instagram.com/briefcatering/">
+                            <img class="header__nav__redes__img" src="fotos/instagram2.png" alt="Logo Facebook">
+                        </a>
                 </div>
         </nav>
-    </header>     
+    </header>    
     <section class="sectionN">
         <article class="sectionN__article">
             <div class="sectionN__article__div">
